tests/fsharp/typecheck/sigs/neg41.bsl

neg41.fs(3,1,3,5): parse error FS0010: Unexpected keyword 'type' in definition. Expected '=' or other token.
